...
        android:text="$$$"
        app:layout_constraintBottom_toBottomOf="@+id/textView_numberOfReviews"
        app:layout_constraintStart_toEndOf="@+id/textView_numberOfReviews"
        app:layout_constraintTop_toTopOf="@+id/textView_numberOfReviews" />

    <TextView
        android:id="@+id/textView_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_downvote"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <ImageButton
        android:id="@+id/imageButton_upvote"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/effect_ripple_upvote"
        app:layout_constraintBottom_toBottomOf="@+id/textView_votes"
        app:layout_constraintEnd_toStartOf="@+id/textView_votes"
        app:layout_constraintTop_toTopOf="@+id/textView_votes"
...
